--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -148,6 +148,158 @@
     }
 }
 
+@media (max-width:1024px) {
+    .header {
+        scroll-behavior: smooth;
+        .header-container {
+            display: flex;
+            justify-content: space-between;
+            max-width: 900px;
+            margin: 0 auto;
+            .container-logo {
+                border: 1px solid rgb(248, 245, 245);
+                img {
+                    width: 90px;
+                    height: 90px;
+                }
+            }
+    
+            .nav-bar {
+                ul {
+                    list-style: none;
+                    li {
+                        display: inline-block;
+                        padding: 0px 20px;
+                        a {
+                            font-family: sans-serif;
+                            line-height: 90px;
+                            color: #2c2c2c;
+                            font-weight: 700;
+                            font-size: 14px;
+                        }
+    
+                        a:hover {
+                            color: #bc906b;
+                        }
+                    }
+                }
+            }
+            .menu-mobile {
+                display: none;
+            }
+        }
+        .nav-bar-mobile {
+            display: none;
+        }
+    }
+    
+    .cart-logo {
+        width: 60px;
+        height: 60px;
+        position: fixed;
+        z-index: 998;
+        background-color: #c70e40;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5px;
+        color: #fff;
+        right: 20px;
+        bottom: 20px;
+        .amout-products {
+            position: absolute;
+            top: -10px;
+            right: -5px;
+            width: 20px;
+            height: 20px;
+            background-color: #c70e40;
+            border-radius: 50%;
+            text-align: center;
+        }
+    }
+    .cart-logo:hover {
+        cursor: pointer;
+    }
+    .scroll-up {
+        position: fixed;
+        z-index: 200;
+        width: 40px;
+        height: 40px;
+        background-color: #bc906b;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        right: 20px;
+        bottom: 80px;
+        transition: all 0.5s ease;
+        a {
+            i {
+                color: #fff;
+                font-size: 20px;
+            }
+        }
+    }
+    
+    .scroll-up:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+    
+    .cart {
+        position: fixed;
+        z-index: 99999;
+        height: 90vh;
+        width: 50vw;
+        top: 0;
+        right: 0;
+        background-color: #fff;
+        box-shadow: 0 0 3px 1px rgb(189, 189, 189);
+        transition: all 0.5s ease;
+        .fa-xmark {
+            color: red;
+            font-size: 30px;
+            padding: 5px 13px;
+            border-radius: 50%;
+            border: 1px solid red;
+            margin-top: 20px;
+            float: right;
+        }
+        .fa-xmark:hover {
+            cursor: pointer;
+            border: none;
+            background-color: #c70e40;
+            color: #fff;
+            transition: all 0.5s ease;
+        }
+        .cart-product-infor {
+            margin: 0 auto;
+            margin-top: 100px;
+            height: 70%;
+            width: 90%;
+            h4 {
+                color: #2c2c2c;
+                font-size: 25px;
+            }
+            .cart-product-main {
+                scrollbar-color: red;
+                overflow-y: auto;
+                max-height: 100%;
+                width: 100%;
+            }
+            span {
+                padding: 15px 10px;
+                background-color: #F9F9F9;
+                display: block;
+                margin-top: 15px;
+                font-size: 18px;
+                color: #000;
+                font-weight: 700;
+            }
+        }
+    }
+}
+
 @media (max-width:740px) {
     .header {
         position: relative;
@@ -189,13 +341,13 @@
             }
             .menu-mobile {
                 display: inherit;
-                width: 60px;
+                width: 53px;
                 height: 40px;
                 background-color: #bc906b;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                font-size: 25px;
+                font-size: 21px;
                 color: #fff;
                 border-radius: 5px;
                 margin-right: 15px;
@@ -242,6 +394,58 @@
                 li:hover a{
                     color: #bc906b;
                 }
+            }
+        }
+    }
+    .cart {
+        position: fixed;
+        z-index: 99999;
+        height: 90vh;
+        width: 80vw;
+        top: 10vh;
+        right: 0;
+        background-color: #fff;
+        box-shadow: 0 0 3px 1px rgb(189, 189, 189);
+        transition: all 0.5s ease;
+        .fa-xmark {
+            color: red;
+            font-size: 20px;
+            padding: 6px 13px;
+            border-radius: 50%;
+            border: 1px solid red;
+            margin-top: 20px;
+            float: right;
+        }
+        .fa-xmark:hover {
+            cursor: pointer;
+            border: none;
+            background-color: #c70e40;
+            color: #fff;
+            transition: all 0.5s ease;
+        }
+        .cart-product-infor {
+            margin: 0 auto;
+            margin-top: 50px;
+            height: 70%;
+            width: 90%;
+            h4 {
+                color: #2c2c2c;
+                font-size: 20px;
+            }
+            .cart-product-main {
+                scrollbar-color: red;
+                overflow-y: auto;
+                max-height: 100%;
+                width: 100%;
+            }
+            span {
+                padding: 15px 10px;
+                background-color: #F9F9F9;
+                display: block;
+                margin-top: 15px;
+                font-size: 16px;
+                color: #000;
+                font-weight: 700;
             }
         }
     }
