--- a/src/components/About/CreateFavour/CreateFavour.scss
+++ b/src/components/About/CreateFavour/CreateFavour.scss
@@ -4,7 +4,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    .create-favour-image {
+    .create-favour-image-background {
         background-image: url('../../../img/flavour_bg.jpg');
         width: 100%;
         height: 80%;
@@ -142,6 +142,270 @@
         .awards-item {
             display: flex;
             justify-content: center;
+        }
+    }
+}
+@media (max-width:1024px) {
+    .create-favour {
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        align-items: center;
+        .create-favour-image-background {
+            background-image: url('../../../img/flavour_bg.jpg');
+            width: 100%;
+            height: 80%;
+           display: none; 
+        }
+        .create-favour-main {
+            position:relative; 
+            right: 0;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            .create-favour-container {
+                margin: 0 auto;
+                max-width: 1200px;
+                height: 100%;
+                display: inherit;
+                justify-content: space-between;
+                align-items: center;
+                .create-favour-intro {
+                    width: 90%;
+                    margin: 0 auto;
+                    text-align: center;
+                    h2 {
+                        font-family: 'Cookie', cursive;
+                        font-size: 50px;
+                        font-weight: 500;
+                        color: #000;
+                    }
+                    h3 {
+                        display: inline;
+                        color: #bc906b;
+                        font-size: 50px;
+                        font-weight: 500;
+                    }
+                    p {
+                        margin: 0 auto;
+                        width: 90%;
+                        font-family: sans-serif;
+                        font-size: 17px;
+                        margin-top: 30px;
+                        color: #666666;
+                        line-height: 22px;
+                    }
+                    button {
+                        position: relative;
+                        width: 150px;
+                        height: 40px;
+                        font-size: 14px;
+                        font-weight: 700;
+                        background-color: #bc906b;
+                        color: #fff;
+                        font-family: sans-serif;
+                        line-height: 40px;
+                        margin: 0 auto;
+                        margin-top: 40px;
+                        transition: all 0.5s ease;
+                        border: none;
+                    }
+                    button::before {
+                        content: '';
+                        position: absolute;
+                        width: 100%;
+                        height: 5px;
+                        background-color: #bc906b;
+                        opacity: 0.4;
+                        bottom: -5px;
+                        left: 5px;
+                        transition: all 0.5s ease;
+                    }
+                    button::after {
+                        content: '';
+                        position: absolute;
+                        width: 5px;
+                        height: 100%;
+                        background-color: #bc906b;
+                        opacity: 0.4;
+                        top: 2px;
+                        right: -5px;
+                        transition: all 0.5s ease;
+                    }
+                    button:hover {
+                        cursor: pointer;
+                        background-color: #bc8151;
+                    }
+                    button:hover::after {
+                        display: none;
+                    }
+                    button:hover::before {
+                        display: none;
+                    }
+                }
+                .create-favour-image {
+                    width: 90%;
+                    height: 100%;
+                    margin:  50px auto;
+                    overflow: hidden;
+                    position: relative;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        transition: all 1s ease;
+                    }
+                }
+                .create-favour-image::before {
+                    content: '';
+                    position: absolute;
+                    width: 30%;
+                    height: 100%;
+                    top: 0px;
+                    left: -50%;
+                    z-index: 100;
+                    background-color: rgba(white , 0.7);
+                    }
+            
+                .create-favour-image:hover::before{
+                    transition: all 1s ease;
+                    left: 100%;
+                }
+                .create-favour-image:hover img {
+                    transform: scale(1.1);
+                }
+                
+            }
+        }
+    }
+    
+    .awards {
+        margin-top: 50px;
+        width: 100%;
+        .awards-container {
+            margin: 0 auto;
+            max-width: 1200px;
+            button {
+                display: none;
+            }
+            .awards-item {
+                display: flex;
+                justify-content: center;
+                img {
+                    width: 60%;
+                }
+            }
+        }
+    }
+}
+@media(max-width:740px) {
+    .create-favour {
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        align-items: center;
+        .create-favour-image-background {
+            display: none;
+        }
+        .create-favour-main {
+            position:relative; 
+            .create-favour-container {
+                margin: 0 auto;
+                max-width: none;
+                height: auto;
+                display: inherit;
+                .create-favour-intro {
+                    margin: 0 auto;
+                    width: 90%;
+                    text-align: center;
+                    h2 {
+                        font-family: 'Cookie', cursive;
+                        font-size: 35px;
+                        font-weight: 500;
+                        color: #000;
+                    }
+                    h3 {
+                        display: inline;
+                        color: #bc906b;
+                        font-size: 35px;
+                        font-weight: 500;
+                    }
+                    p {
+                        margin: 0 auto;
+                        width: 90%;
+                        font-family: sans-serif;
+                        font-size: 16px;
+                        margin-top: 30px;
+                        color: #666666;
+                        line-height: 22px;
+                    }
+                    button {
+                        position: relative;
+                        width: 150px;
+                        height: 40px;
+                        font-size: 13px;
+                        font-weight: 700;
+                        background-color: #bc906b;
+                        color: #fff;
+                        font-family: sans-serif;
+                        line-height: 40px;
+                        margin: 0 auto;
+                        margin-top: 40px;
+                        transition: all 0.5s ease;
+                        border: none;
+                    }
+                }
+                .create-favour-image {
+                    margin: 50px auto;
+                    width: 90%;
+                    height: 100vw;
+                    overflow: hidden;
+                    position: relative;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        transition: all 1s ease;
+                    }
+                }
+                .create-favour-image::before {
+                    content: '';
+                    position: absolute;
+                    width: 30%;
+                    height: 100%;
+                    top: 0px;
+                    left: -50%;
+                    z-index: 100;
+                    background-color: rgba(white , 0.7);
+                    }
+            
+                .create-favour-image:hover::before{
+                    transition: all 1s ease;
+                    left: 100%;
+                }
+                .create-favour-image:hover img {
+                    transform: scale(1.1);
+                }
+                
+            }
+        }
+    }
+    
+    .awards {
+        margin-top: 20px;
+        width: 100%;
+        .awards-container {
+            margin: 0 auto;
+            max-width: none;
+            width: 90%;
+            button {
+                display: none;
+            }
+            .awards-item {
+                display: flex;
+                justify-content: center;
+            }
         }
     }
 }
