--- a/src/components/About/Slide/slide.scss
+++ b/src/components/About/Slide/slide.scss
@@ -5,6 +5,7 @@
         background-size: cover;
         text-align: center;
         position: relative;
+
         h1 {
             font-size: 70px;
             color: #fff;
@@ -22,4 +23,20 @@
                 color: #b6835a;
             }
         }
+}
+
+@media (max-width:740px) {
+    .slide-about {
+        padding-top: none;
+        height: 70vw;
+            h1 {
+                font-size: 50px;  
+                h2 {
+                    display: inline-block;
+                    font-size: 40px;
+                    font-weight: 500;
+                    color: #b6835a;
+                }
+            }
+    }
 }
