--- a/src/components/Home/intro-content/CheckOurMenu/CheckOurMenu.scss
+++ b/src/components/Home/intro-content/CheckOurMenu/CheckOurMenu.scss
@@ -3,11 +3,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 130vh;
+    height: auto;
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 10px;
     .check-our-menu-overlay {
         position: absolute;
         top: 0;
@@ -20,6 +21,8 @@
     .check-our-menu-container {
         position: relative;
         text-align: center;
+        height: auto;
+        overflow: hidden;
         h2 {
             text-align: center;
             font-family: 'Cookie', cursive;
@@ -56,200 +59,384 @@
             }
         }
         .seperate {
-            width: 100%;
+            width: 90%;
             height: 1px;
             background-color: gray;
             position: relative;
-            margin-top: 10px;
+            margin: 10px auto;
         }
-
         .check-our-menu-slider {
-            margin-top: 30px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            i {
-                color: #fff;
-                font-size: 20px;
+            max-width: 1200px;
+            margin: 50px auto;
+            button {
+                display: none;
+            }
+            .check-our-menu-slider-item {
+                background-color: #fff;
+                width: 80%;
+                margin: 0 auto;
+                padding-top: 50px;
+                padding-bottom: 30px;
+                .container-img {
+                    position: relative;
+                    border: none;
+                    img {
+                        width: 70%;
+                        height: auto;
+                        border-radius: 50%;
+                        transition: all 0.5s ease;
+                    }
+                    img:hover {
+                        transform: scale(0.9);
+                    }
+                }
+                .container-img::before {
+                    content: '$42';
+                    position: absolute;
+                    font-family: 'Cookie', cursive;
+                    font-size: 23px;
+                    border: 10px solid #fff;
+                    z-index: 1;
+                    bottom: -20px;
+                    right: 50px;
+                    background-color: #bc906b;
+                    font-size: 30px;
+                    color: #fff;
+                    padding: 7% 6%;
+                    border-radius: 50%;
+                }
+                h3 {
+                    display: block;
+                    font-family: 'ZCOOL XiaoWei', serif;
+                    font-weight: 500;
+                    font-size: 23px;
+                    margin-top: 30px;
+                }
+
+                p {
+                    display: block;
+                    width: 80%;
+                    margin: 0 auto;
+                    font-size: 16px;
+                    color: #666666;
+                    margin-top: 10px;
+                }
+                
+            button {
+                display: inherit;
+                width: 80%;
+                height: 50px;
+                margin: 30px auto;
+                font-size: 13px;
+                font-weight: 700;
                 background-color: #bc906b;
-                padding: 10px 15px;
-                border-radius: 50%;
+                border: none;
+                color: #fff;
+                font-family: sans-serif;
                 transition: all 0.5s ease;
             }
 
-            i:hover {
+            button:hover {
                 cursor: pointer;
-                transform: scale(.8);
-            }
-            .check-our-menu-slider-container {
-                overflow: hidden;
-                .check-our-menu-slider-main {
-                    display: flex;
-                    max-width: 1000px;
-                    transition: all 0.5s ease;
-                    justify-content: space-between;
-                    .check-our-menu-slider-item {
-                        margin: auto;
-                        width: 30%;
-                        height: 500px;
-                        background-color: #fff;
-                        flex: 1 0 30%;
-                        margin-left: 15px;
-                        margin-right: 15px;
-                        position: relative;
-                        .container-img {
-                            margin-top: 70px;
-                            img {
-                                width: 200px;
-                                height: 200px;
-                                border-radius: 50%;
-                                transition: all 0.5s ease;
-                            }
-                            img:hover {
-                                transform: scale(0.9);
-                            }
-                        }
-    
-                        .cost {
-                            position: absolute;
-                            bottom: 45%;
-                            z-index: 1;
-                            right: 20%;
-                            color: #fff;
-                            padding: 20px 18px;
-                            background-color: #bc906b;
-                            border-radius: 50%;
-                            font-family: 'Cookie', cursive;
-                            font-size: 23px;
-                            border: 10px solid #fff;
-                        }
-                        h3 {
-                            font-family: 'ZCOOL XiaoWei', serif;
-                            font-weight: 500;
-                            font-size: 23px;
-                            margin-top: 20px;
-                        }
-    
-                        p {
-                            display: block;
-                            width: 80%;
-                            margin: 0 auto;
-                            font-size: 16px;
-                            color: #666666;
-                            margin-top: 10px;
-                        }
-    
-                        
-                        button {
-                            width: 200px;
-                            height: 50px;
-                            font-size: 13px;
-                            font-weight: 700;
-                            background-color: #bc906b;
-                            border: none;
-                            color: #fff;
-                            font-family: sans-serif;
-                            margin-top: 30px;
-                            transition: all 0.5s ease;
-                        }
-    
-                        button:hover {
-                            cursor: pointer;
-                            background-color: #000;
-                        }
-                    }
-                }
+                background-color: #000;
             }
         }
     }
+    }
 }
-
-@media (max-width:740px) {
+@media (max-width:1024px) {
     .check-our-menu {
-        height: 130vh;
+        background-image: url('../../../../img/menu_bg_image-min.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        padding-top: 50px;
+        padding-bottom: 10px;
+        .check-our-menu-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            opacity: 0.6;
+            background-color: #000000;
+        }
         .check-our-menu-container {
             position: relative;
             text-align: center;
+            height: auto;
+            overflow: hidden;
             h2 {
-                font-size: 35px;
+                text-align: center;
+                font-family: 'Cookie', cursive;
+                color: #fff;
+                font-size: 50px;
+                font-weight: 500;
             }
             h3 {
-                font-size: 35px;
+                text-align: center;
+                display: inline;
+                color: #bc906b;
+                font-size: 50px;
+                font-weight: 500;
             }
             .intro-icons {
                 display: flex;
-                width: 90%;
-                margin: 30px auto;
-                justify-content: space-between;
+                margin-top: 30px;
+                justify-content: center;
                 .intro-icon {
-                    padding: 0 0px;
+                    padding: 0 30px;
                     i {
-                        font-size: 16px;
+                        color: #fff;
+                        font-size: 30px;
                     }
                     p {
-                        font-size: 10px;
+                        color: #fff;
+                        font-size: 15px;
+                        font-weight: 700;
+                        margin-top: 10px;
+                    }
+                    :hover {
+                        cursor: pointer;
                     }
                 }
+            }
+            .seperate {
+                width: 90%;
+                height: 1px;
+                background-color: gray;
+                position: relative;
+                margin: 10px auto;
             }
             .check-our-menu-slider {
-                margin-top: 30px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                i {
+                max-width: 1200px;
+                margin: 50px auto;
+                button {
                     display: none;
                 }
-    
-                .check-our-menu-slider-container {
-                    overflow: hidden;
-                    .check-our-menu-slider-main {
-                        max-width: 300px;
-                        justify-content: center;
-                        .check-our-menu-slider-item {
-                            width: 80%;
-                            flex: 1 0 80%;
-                            margin-left: 30px;
-                            margin-right: 30px;
-                            height: 60vh;
-                            .container-img {
-                                margin-top: 30px;
-                                img {
-                                    width: 65%;
-                                    height: 50%;
-                                    border-radius: 50%;
-                                    transition: all 0.5s ease;
-                                }
-                                img:hover {
-                                    transform: scale(0.9);
-                                }
-                            }
-                            .cost {
-                                bottom: 50%;
-                                right: 20%;
-                                padding: 18px 17px;
-                                font-size: 20px;
-                            }
-                            h3 {
-                                display: block;
-                                font-family: 'ZCOOL XiaoWei', serif;
-                                font-weight: 500;
-                                font-size: 20px;
-                                margin-top: 20px;
-                            }
-        
-                            p {
-                                display: block;
-                                width: 90%;
-                                margin: 0 auto;
-                                font-size: 16px;
-                                color: #666666;
-                                margin-top: 10px;
-                            }
-        
+                .check-our-menu-slider-item {
+                    background-color: #fff;
+                    width: 80%;
+                    margin: 0 auto;
+                    padding-top: 50px;
+                    padding-bottom: 30px;
+                    .container-img {
+                        position: relative;
+                        border: none;
+                        img {
+                            width: 70%;
+                            height: auto;
+                            border-radius: 50%;
+                            transition: all 0.5s ease;
                         }
+                        img:hover {
+                            transform: scale(0.9);
+                        }
+                    }
+                    .container-img::before {
+                        content: '$42';
+                        position: absolute;
+                        font-family: 'Cookie', cursive;
+                        font-size: 23px;
+                        border: 10px solid #fff;
+                        z-index: 1;
+                        bottom: -20px;
+                        right: 50px;
+                        background-color: #bc906b;
+                        font-size: 30px;
+                        color: #fff;
+                        padding: 7% 6%;
+                        border-radius: 50%;
+                    }
+                    h3 {
+                        display: block;
+                        font-family: 'ZCOOL XiaoWei', serif;
+                        font-weight: 500;
+                        font-size: 23px;
+                        margin-top: 30px;
+                    }
+    
+                    p {
+                        display: block;
+                        width: 80%;
+                        margin: 0 auto;
+                        font-size: 16px;
+                        color: #666666;
+                        margin-top: 10px;
+                    }
+                    
+                button {
+                    display: inherit;
+                    width: 80%;
+                    height: 50px;
+                    margin: 30px auto;
+                    font-size: 13px;
+                    font-weight: 700;
+                    background-color: #bc906b;
+                    border: none;
+                    color: #fff;
+                    font-family: sans-serif;
+                    transition: all 0.5s ease;
+                }
+    
+                button:hover {
+                    cursor: pointer;
+                    background-color: #000;
+                }
+            }
+        }
+        }
+    }
+}
+@media (max-width:740px) {
+    .check-our-menu {
+        background-image: url('../../../../img/menu_bg_image-min.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        padding-top: 50px;
+        padding-bottom: 10px;
+        .check-our-menu-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            opacity: 0.6;
+            background-color: #000000;
+        }
+        .check-our-menu-container {
+            position: relative;
+            text-align: center;
+            height: auto;
+            overflow: hidden;
+            h2 {
+                text-align: center;
+                font-family: 'Cookie', cursive;
+                color: #fff;
+                font-size: 35px;
+                font-weight: 500;
+            }
+            h3 {
+                text-align: center;
+                display: inline;
+                color: #bc906b;
+                font-size: 35px;
+                font-weight: 500;
+            }
+            .intro-icons {
+                display: flex;
+                margin-top: 30px;
+                justify-content: center;
+                .intro-icon {
+                    padding: 0 10px;
+                    i {
+                        color: #fff;
+                        font-size: 26px;
+                    }
+                    p {
+                        color: #fff;
+                        font-size: 13px;
+                        font-weight: 700;
+                        margin-top: 10px;
+                    }
+                    :hover {
+                        cursor: pointer;
                     }
                 }
             }
+            .seperate {
+                width: 90%;
+                height: 1px;
+                background-color: gray;
+                position: relative;
+                margin: 10px auto;
+            }
+            .check-our-menu-slider {
+                max-width: 1200px;
+                margin: 50px auto;
+                button {
+                    display: none;
+                }
+                .check-our-menu-slider-item {
+                    background-color: #fff;
+                    width: 70%;
+                    margin: 0 auto;
+                    padding-top: 50px;
+                    padding-bottom: 30px;
+                    .container-img {
+                        position: relative;
+                        border: none;
+                        img {
+                            width: 60%;
+                            height: auto;
+                            border-radius: 50%;
+                            transition: all 0.5s ease;
+                        }
+                        img:hover {
+                            transform: scale(0.9);
+                        }
+                    }
+                    .container-img::before {
+                        content: '$42';
+                        position: absolute;
+                        font-family: 'Cookie', cursive;
+                        font-size: 23px;
+                        border: 10px solid #fff;
+                        z-index: 1;
+                        bottom: -20px;
+                        right: 65px;
+                        background-color: #bc906b;
+                        font-size: 30px;
+                        color: #fff;
+                        padding: 5% 5%;
+                        border-radius: 50%;
+                    }
+                    h3 {
+                        display: block;
+                        font-family: 'ZCOOL XiaoWei', serif;
+                        font-weight: 500;
+                        font-size: 23px;
+                        margin-top: 30px;
+                    }
+    
+                    p {
+                        display: block;
+                        width: 80%;
+                        margin: 0 auto;
+                        font-size: 16px;
+                        color: #666666;
+                        margin-top: 10px;
+                    }
+                    
+                button {
+                    display: inherit;
+                    width: 80%;
+                    height: 50px;
+                    margin: 30px auto;
+                    font-size: 13px;
+                    font-weight: 700;
+                    background-color: #bc906b;
+                    border: none;
+                    color: #fff;
+                    font-family: sans-serif;
+                    transition: all 0.5s ease;
+                }
+    
+                button:hover {
+                    cursor: pointer;
+                    background-color: #000;
+                }
+            }
+        }
         }
     }
 }
