--- a/src/components/Home/intro-content/MakeaReservation/MakeaReservation.scss
+++ b/src/components/Home/intro-content/MakeaReservation/MakeaReservation.scss
@@ -102,7 +102,114 @@
         }
     }
 }
-
+@media (max-width:1024px) {
+    .make-a-reservation {
+        background-image: url('../../../../img/reservation_bg_image.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 130vh;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .make-a-reservation-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            opacity: 0.6;
+            background-color: #000000;
+        }
+        .make-a-reservation-container {
+            position: relative;
+            h2 {
+                text-align: center;
+                font-family: 'Cookie', cursive;
+                color: #fff;
+                font-size: 50px;
+                font-weight: 500;
+            }
+            h3 {
+                text-align: center;
+                display: inline;
+                color: #bc906b;
+                font-size: 50px;
+                font-weight: 500;
+            }
+            .pattern {
+                display: flex;
+                justify-content: center;
+            }
+            .make-a-reservation-main {
+                max-width: none;
+                margin: 0 auto;
+                display: inherit;
+                img {
+                    width: 50%;
+                    height: 550px;
+                    display: none;
+                }
+    
+                .form {
+                    width: 90%;
+                    height: 550px;
+                    margin: 0 auto;
+                    background-color: #fff;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    form {
+                        margin: 0 auto;
+                        text-align: center;
+                        label {
+                            display: block;
+                            text-align: center;
+                            color: #000;
+                            font-size: 25px;
+                            font-weight: 500;
+                        }
+                        input {
+                            display: inline-block;
+                            margin: 0 auto;
+                            margin-top: 20px;
+                            width: 80%;
+                            height: 50px;
+                            padding: 0px 20px;
+                            color: #666666;
+                            outline: none;
+                        }
+                        select {
+                            width: 80%;
+                            height: 50px;
+                            margin-top: 20px;
+                            padding: 0px 20px;
+                            color: #666666;
+                        }
+                        button {
+                            width: 80%;
+                            height: 50px;
+                            margin-top: 20px;
+                            padding: 0px 20px;
+                            font-size: 15px;
+                            font-weight: 700;
+                            color: #fff;
+                            background-color: #bc906b;
+                            border: none;
+                            transition: all 0.5s ease;
+                        }
+    
+                        button:hover {
+                            background-color: #000;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 @media (max-width:740px) {
     .make-a-reservation {
         height: 130vh;
