--- a/src/components/Home/intro-content/Our Daily Offers/OurDailyOffers.scss
+++ b/src/components/Home/intro-content/Our Daily Offers/OurDailyOffers.scss
@@ -31,15 +31,18 @@
         right: 0;
     }
     .offers-container {
-        max-width: 1200px;
+        width: 90%;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
         .offers-menu {
             overflow: hidden;
             position: relative;
+            width: 47%;
+            border-radius: 10px;
             img {
-                height: 420px;
+                width: 100%;
+                height: 35vw;
                 transition: all 0.5s ease;
             }
             img:hover {
@@ -63,15 +66,19 @@
             left: 150%;
         }
         .offers-items {
-            height: 420px;
+            width: 47%;
+            height: 35vw;
             .offers-item {
                 height: 30%;
                 display: flex;
-                margin-top: 10px;
+                margin-top: 2%;
                 .offers-item-image{
                     overflow: hidden;
                     position: relative;
+                    width: 30%;
+                    border-radius: 10px;
                     img {
+                        width: 100%;
                         height: 100%;
                         transition: all 1.2s ease;
                     }
@@ -97,7 +104,7 @@
                         left: 150%;
                     }
                 .item-content {
-                    margin-left: 30px;
+                    margin-left: 10px;
                     h3 {
                         display: inline;
                         font-family: 'ZCOOL XiaoWei', serif;
@@ -119,84 +126,124 @@
                         color: #666666;
                     }
                 }
-
-                #spicy {
-                    h3::before {
-                        position: absolute;
-                        content: '';
-                        border: 1px dashed #000;
-                        width: 190%;
-                        top: 17px;
-                        left: 140px;
-                    }
-                }
-                #almond {
-                    h3::before {
-                        position: absolute;
-                        content: '';
-                        border: 1px dashed #000;
-                        width: 60%;
-                        top: 17px;
-                        left: 240px;
-                    }
-                }
-                #Tuscan {
-                    h3::before {
-                        position: absolute;
-                        content: '';
-                        border: 1px dashed #000;
-                        width: 80%;
-                        top: 17px;
-                        left: 220px;
-                    }
-                }
             }
         }
     }
 }
 
-@media (max-width:740px) {
+@media (max-width:1024px) {
     .our-daily-offers {
+        margin-top: 50px;
+        padding-bottom: 80px;
+        position: relative;
         h2 {
-            font-size: 35px;
+            text-align: center;
+            font-family: 'Cookie', cursive;
+            color: #000;
+            font-size: 50px;
+            font-weight: 500;
         }
         h3 {
-            font-size: 35px;
+            text-align: center;
+            display: inline;
+            color: #bc906b;
+            font-size: 50px;
+            font-weight: 500;
+        }
+        .pattern {
+            display: flex;
+            justify-content: center;
+        }
+        #daily_offer_object01 {
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        #daily_offer_object02 {
+            position: absolute;
+            bottom: 0;
+            right: 0;
         }
         .offers-container {
             max-width: none;
+            margin: 0 auto;
             display: inherit;
+            justify-content: space-between;
             .offers-menu {
-                width: 90%;
+                overflow: hidden;
+                position: relative;
+                width: 60%;
                 margin: 0 auto;
                 img {
                     width: 100%;
-                    height: 40vh;
+                    height: 50vw;
+                    transition: all 0.5s ease;
+                }
+                img:hover {
+                    cursor: pointer;
+                    transform: scale(1.05);
                 }
            }
+           .offers-menu::before {
+            content: '';
+            position: absolute;
+            width: 30%;
+            height: 100%;
+            top: 0px;
+            left: -50%;
+            z-index: 100;
+            background-color: rgba(white , 0.7);
+            }
+    
+            .offers-menu:hover::before{
+                transition: all 1.2s ease;
+                left: 150%;
+            }
             .offers-items {
                 height: 420px;
+                width: 100%;
+                margin-top: 40px;
+                margin-left: 40px;
                 .offers-item {
-                    width: 90%;
                     height: 30%;
                     display: flex;
-                    margin: 5px auto;
+                    margin-top: 10px;
                     .offers-item-image{
                         overflow: hidden;
                         position: relative;
-                        width: 40%;
+                        width: 13%;
                         img {
-                            width: 70%;
-                            height: 50%;
+                            width: 100%;
+                            height: 100%;
                             transition: all 1.2s ease;
                         }
+    
+                        img:hover {
+                            transform: scale(1.1);
+                        }
                     }
+                    .offers-item-image::before {
+                        content: '';
+                        position: absolute;
+                        width: 30%;
+                        height: 100%;
+                        top: 0px;
+                        left: -50%;
+                        z-index: 100;
+                        background-color: rgba(white , 0.7);
+                        
+                        }
+                
+                        .offers-item-image:hover::before{
+                            transition: all 1.2s ease;
+                            left: 150%;
+                        }
                     .item-content {
-                        margin-left: 0px;
+                        margin-left: 30px;
                         h3 {
                             display: inline;
                             font-family: 'ZCOOL XiaoWei', serif;
-                            font-size: 23px;
+                            font-size: 28px;
                             font-weight: 500;
                             position: relative;
                         }
@@ -214,25 +261,143 @@
                             color: #666666;
                         }
                     }
+                }
+            }
+        }
+    }
+}
+@media (max-width:740px) {
+    .our-daily-offers {
+        margin-top: 50px;
+        padding-bottom: 80px;
+        position: relative;
+        h2 {
+            text-align: center;
+            font-family: 'Cookie', cursive;
+            color: #000;
+            font-size: 50px;
+            font-weight: 500;
+        }
+        h3 {
+            text-align: center;
+            display: inline;
+            color: #bc906b;
+            font-size: 50px;
+            font-weight: 500;
+        }
+        .pattern {
+            display: flex;
+            justify-content: center;
+        }
+        #daily_offer_object01 {
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        #daily_offer_object02 {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+        }
+        .offers-container {
+            width: 100%;
+            margin: 0 auto;
+            display: inherit;
+            justify-content: space-between;
+            .offers-menu {
+                overflow: hidden;
+                position: relative;
+                width: 90%;
+                border-radius: 10px;
+                img {
+                    width: 100%;
+                    height: 60vw;
+                    transition: all 0.5s ease;
+                }
+                img:hover {
+                    cursor: pointer;
+                    transform: scale(1.05);
+                }
+           }
+           .offers-menu::before {
+            content: '';
+            position: absolute;
+            width: 30%;
+            height: 100%;
+            top: 0px;
+            left: -50%;
+            z-index: 100;
+            background-color: rgba(white , 0.7);
+            }
     
-                    #spicy {
-                        h3::before {
-                            display: none;
+            .offers-menu:hover::before{
+                transition: all 1.2s ease;
+                left: 150%;
+            }
+            .offers-items {
+                width: 90%;
+                height: auto;
+                .offers-item {
+                    height: 30%;
+                    display: flex;
+                    margin-top: 50px;
+                    .offers-item-image{
+                        overflow: hidden;
+                        position: relative;
+                        width: 24%;
+                        height: 15vw;
+                        border-radius: 10px;
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            transition: all 1.2s ease;
+                        }
+    
+                        img:hover {
+                            transform: scale(1.1);
                         }
                     }
-                    #almond {
-                        h3::before {
-                            display: none;
+                    .offers-item-image::before {
+                        content: '';
+                        position: absolute;
+                        width: 30%;
+                        height: 100%;
+                        top: 0px;
+                        left: -50%;
+                        z-index: 100;
+                        background-color: rgba(white , 0.7);
+                        
                         }
-                    }
-                    #Tuscan {
-                        h3::before {
-                            display: none;
+                
+                        .offers-item-image:hover::before{
+                            transition: all 1.2s ease;
+                            left: 150%;
+                        }
+                    .item-content {
+                        margin-left: 10px;
+                        h3 {
+                            display: inline;
+                            font-family: 'ZCOOL XiaoWei', serif;
+                            font-size: 23px;
+                            font-weight: 500;
+                            position: relative;
+                        }
+                        h4 {
+                            display: inline;
+                            font-family: 'ZCOOL XiaoWei', serif;
+                            color: #bc906b;
+                            font-size: 22px;
+                            font-weight: 500;
+                            float: right;
+                        }
+                        p {
+                            margin-top: 20px;
+                            font-size: 17px;
+                            color: #666666;
                         }
                     }
                 }
             }
         }
     }
-    
 }
