--- a/src/components/Home/intro-content/discover/discover.scss
+++ b/src/components/Home/intro-content/discover/discover.scss
@@ -172,6 +172,159 @@
     }
 }
 
+@media (max-width:1024px) {
+    .discover {
+        margin-top: 300px;
+        position: relative;
+        #story_object02 {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+        #story_object01 {
+            position: absolute;
+            left: 0;
+            bottom: 50vh;
+        }
+        .discover-container {
+        display: inherit;
+        justify-content: space-between;
+        max-width: 1000px;
+        margin: 0 auto;
+            .discover-intro {
+                width: 90%;
+                text-align: center;
+                margin: 0 auto;
+                h2 {
+                    font-family: 'Cookie', cursive;
+                    font-size: 50px;
+                    font-weight: 500;
+                }
+                h3 {
+                    display: inline;
+                    color: #bc906b;
+                    font-size: 50px;
+                    font-weight: 500;
+                }
+                p {
+                    font-family: 'ZCOOL XiaoWei', serif;
+                    font-size: 17px;
+                    margin-top: 30px;
+                    color: #666666;
+                    line-height: 22px;
+                }
+                .number {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-top: 60px;
+                    span {
+                        h2 {
+                            font-size: 40px;
+                            color: #666666;
+                        }
+                        h3 {
+                            font-size: 20px;
+                        }
+                    }
+                }
+            }
+           .imageWrapper {
+                margin: 30px auto;
+               width: 60%;
+               overflow: hidden;
+               position: relative;
+               transition: all 2s ease;
+                img {
+                    width: 100%;
+                    height: 60vh;
+                    transition: all 0.5s ease;
+                }
+    
+                img:hover {
+                    transform: scale(1.1);
+                }
+           }
+    
+           .imageWrapper::before {
+               content: '';
+               position: absolute;
+               width: 30%;
+               height: 100%;
+               top: 0px;
+               left: -50%;
+               z-index: 100;
+               background-color: rgba(white , 0.7);
+           }
+    
+           .imageWrapper:hover::before{
+                transition: all 1.2s ease;
+                left: 150%;
+           }
+        }
+        .get-offer {
+            margin-top: 50px;
+            background-image: url('../../../../img/cta_image-min.jpg');
+            padding-top: none;
+            height: 50vw;
+            background-size: cover;
+            background-repeat: no-repeat;
+            position: relative;
+            .overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background-color: #000;
+                opacity: 0.3;
+            }
+            .get-offer-content {
+                position: absolute;
+                display: inherit;
+                width: auto;
+                z-index: 1;
+                top:50%; 
+                left:50%; 
+                transform:translate(-50%, -40%); 
+                width:90%;
+                span {
+                    display: block;
+                    width: 90%;
+                    margin: 0 auto;
+                    color: #fff;
+                    text-align: none;
+                    h2 {
+                        display: block;
+                        margin-bottom: 20px;
+                        font-family: 'Cookie', cursive;
+                        font-size: 47px;
+                        font-weight: 500;
+                        opacity: 0.4;
+                    }
+                    h3 {
+                        display: block;
+                        font-size: 30px;
+                    }
+                }
+    
+                button {
+                    position: relative;
+                    width: 140px;
+                    height: 40px;
+                    font-size: 14px;
+                    font-weight: 700;
+                    background-color: #bc906b;
+                    color: #fff;
+                    font-family: sans-serif;
+                    transition: all 0.5s ease;
+                    border: none;
+                    display: block;
+                    margin: 20px auto;
+                }
+            }
+        }
+    }
+}
 @media (max-width:740px) {
     .discover {
         margin-top: 70px;
@@ -221,9 +374,13 @@
             height: 70vh;
             background-size: cover;
             .get-offer-content {
-                display: inherit;
-                width: 100%;
-                transform: translateY(20%);
+                width: 70%;
+                position: absolute;
+                left: 50%;
+                margin-left: 0px;
+                top: 50%;
+                margin-top: -50px;
+                
                 span {
                     margin: 0 auto;
                     width: 80%;
