--- a/src/components/Reservation/Make-A-Reservation/MakeAReservation.scss
+++ b/src/components/Reservation/Make-A-Reservation/MakeAReservation.scss
@@ -41,6 +41,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                margin: 0 auto;
                 form {
                     margin: 0 auto;
                     text-align: center;
@@ -84,6 +85,157 @@
                     button:hover {
                         background-color: #000;
                         cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width:1024px) {
+    .make-A-reservation {
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .make-a-reservation-container {
+            position: relative;
+            h2 {
+                text-align: center;
+                font-family: 'Cookie', cursive;
+                color: #000;
+                font-size: 50px;
+                font-weight: 500;
+            }
+            h3 {
+                text-align: center;
+                display: inline;
+                color: #bc906b;
+                font-size: 50px;
+                font-weight: 500;
+            }
+            .pattern {
+                display: flex;
+                justify-content: center;
+            }
+            .make-a-reservation-main {
+                max-width: 1000px;
+                margin: 0 auto;
+                display: inherit;
+                img {
+                    display: block;
+                    margin: 0 auto;
+                    width: 90%;
+                    height: 50vw;
+                }
+    
+                .form {
+                    width: 90%;
+                    height: auto;
+                    background-color: rgb(247, 247, 247);
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 20px auto;
+                    form {
+                        margin: 0 auto;
+                        text-align: center;
+                        label {
+                            display: block;
+                            text-align: center;
+                            color: #000;
+                            font-size: 25px;
+                            font-weight: 500;
+                        }
+                        input {
+                            display: inline-block;
+                            margin: 0 auto;
+                            margin-top: 20px;
+                            width: 90%;
+                            height: 50px;
+                            padding: 0px 20px;
+                            color: #666666;
+                            outline: none;
+                        }
+                        select {
+                            width: 90%;
+                            height: 50px;
+                            margin-top: 20px;
+                            padding: 0px 20px;
+                            color: #666666;
+                        }
+                        button {
+                            width: 90%;
+                            height: 50px;
+                            margin-top: 20px;
+                            padding: 0px 20px;
+                            font-size: 15px;
+                            font-weight: 700;
+                            color: #fff;
+                            background-color: #bc906b;
+                            border: none;
+                            transition: all 0.5s ease;
+                        }
+    
+                        button:hover {
+                            background-color: #000;
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media (max-width:740px) {
+    .make-A-reservation {
+        width: 100%;
+        height: auto;
+        margin-top: 40px;
+        .make-a-reservation-container {
+            position: relative;
+            h2 {
+                font-size: 35px;
+            }
+            h3 {
+                font-size: 35px;
+            }
+            .make-a-reservation-main {
+                max-width: none;
+                display: inherit;
+                img {
+                    width: 90%;
+                    height: 70vw;
+                    display: block;
+                    margin: 0 auto;
+                }
+    
+                .form {
+                    width: 90%;
+                    height: auto;
+                    form {
+                        label {
+                            text-align:left;
+                            width: 90%;                           
+                            font-size: 21px;                         
+                            margin: 20px auto;
+                        }
+                        input {
+                            width: 90%;
+                            height: 7vw;
+                           
+                        }
+                        select {
+                            width: 90%;
+                            height: 7vw;
+
+                        }
+                        button {
+                            width: 90%;
+                            height: 7vw;
+                            font-size: 13px;
+                        }
                     }
                 }
             }
