--- a/src/components/Reservation/Slide/slide.scss
+++ b/src/components/Reservation/Slide/slide.scss
@@ -17,3 +17,31 @@
             right: 0;
         }
 }
+
+@media (max-width:1024px) {
+    .slide-about {
+        background-image: url('../../../img/banner_image.jpg');
+            padding-top: 50%;
+           
+            h1 {
+                font-size: 70px;
+                color: #fff;
+                font-weight: 500;
+                position:absolute; 
+                top:50%; 
+                left:50%; 
+                transform:translate(-50%, -50%); 
+                width:50%;
+                right: 0;
+            }
+    }
+}
+@media (max-width:740px) {
+    .slide-about {
+            padding-top: none;
+            height: 70vw;
+            h1 {
+                font-size: 30px;
+            }
+    }
+}
